--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "server/index.ts": {
-      "runtime": "@vercel/node"
+      "runtime": "vercel-node@4.0.0"
     }
   },
   "rewrites": [
