--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/index.ts": {
-      "runtime": "vercel-node@4.0.0"
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
