--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
-  "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/index.ts"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/client/dist/$1"
-    }
+    { "source": "/api/(.*)", "destination": "/api/index.ts" },
+    { "source": "/(.*)", "destination": "/client/dist/$1" }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "client/dist"
