--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
   "name": "binary-ninja-tracker",
   "version": "1.0.0",
-  "type": "module",
-  "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "dev": "vite",
+    "build": "vite build --config client/vite.config.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@neondatabase/serverless": "^0.10.4",
-    "@tanstack/react-query": "^5.60.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.36.4",
-    "drizzle-zod": "^0.5.1",
-    "express": "^4.21.1",
-    "framer-motion": "^11.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.30"
+  }
+}^11.15.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.469.0",
     "nanoid": "^5.0.9",
